--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,21 @@
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <!--Stylesheet-->
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     </head>
     <body>
         <!--Container for React rendering-->
-        <div id="container"></div>
+        <div id="content"></div>
         <!--Bundled file-->
         <script src="bundle.js"></script>
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<!-- Scripts -->
+        <script src="js/jquery.min.js"></script>
+        <script src="js/jquery.dropotron.min.js"></script>
+        <script src="js/skel.min.js"></script>
+        <script src="js/skel-viewport.min.js"></script>
+        <script src="js/util.js"></script>
+        <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+        <script src="js/main.js"></script>
+        <!--Add-ons-->
+        <script src="js/bubbles.js"></script>
     </body>
 </html>
