--- a/public/index.html
+++ b/public/index.html
@@ -12,16 +12,16 @@
         <!--Container for React rendering-->
         <div id="content"></div>
         <!--Bundled file-->
-        <script src="bundle.js"></script>
+        <script src="/bundle.js"></script>
 		<!-- Scripts -->
-        <script src="js/jquery.min.js"></script>
-        <script src="js/jquery.dropotron.min.js"></script>
-        <script src="js/skel.min.js"></script>
-        <script src="js/skel-viewport.min.js"></script>
-        <script src="js/util.js"></script>
+        <script src="/js/jquery.min.js"></script>
+        <script src="/js/jquery.dropotron.min.js"></script>
+        <script src="/js/skel.min.js"></script>
+        <script src="/js/skel-viewport.min.js"></script>
+        <script src="/js/util.js"></script>
         <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-        <script src="js/main.js"></script>
+        <script src="/js/main.js"></script>
         <!--Add-ons-->
-        <script src="js/bubbles.js"></script>
+        <script src="/js/bubbles.js"></script>
     </body>
 </html>
